<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_select_all_"
        android:title="@string/select_all" />

    <item
        android:id="@+id/unselect_all"
        android:icon="@drawable/ic_unselect_all"
        android:title="@string/unselect_all" />

    <item
        android:id="@+id/start_selected"
        android:icon="@drawable/ic_start"
        android:title="@string/speak_selected" />

<!--
    <item
        android:id="@+id/delete_selected"
        android:icon="@drawable/ic_delete_selected"
        android:title="@string/delete_selected" />
-->
    <item
        android:id="@+id/add_new_word"
        android:icon="@drawable/ic_add_word"
        android:title="@string/add_new_word" />

</menu>
