<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.SettingFragment">

    <LinearLayout
        android:id="@+id/llHeader"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvSetting"
            android:textSize="@dimen/large_text"
            android:textColor="@color/gray_dark_not_transpared"
            android:text="@string/action_settings"
            android:paddingTop="@dimen/medium"
            android:paddingBottom="@dimen/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBody"
        android:layout_below="@id/llHeader"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/medium"
        android:paddingLeft="@dimen/medium"
        android:paddingRight="@dimen/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:textAppearance="@style/SettingsLabel"
            android:text="@string/default_language_for_translate"
            android:layout_marginTop="@dimen/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spDefaultLanguage"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginRight="@dimen/medium"
            android:background="@color/gray_dark_not_transpared"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"/>

        <android.support.v7.widget.AppCompatTextView
            android:textAppearance="@style/SettingsLabel"
            android:text="@string/speak_speed"
            android:layout_marginTop="@dimen/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/sbSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/medium"
            android:layout_marginTop="@dimen/medium"
            android:max="100"
            android:progressDrawable="@drawable/rect_gray"
            tools:progressBackgroundTint="@drawable/seek_bar_head" />

    </LinearLayout>

</RelativeLayout>